促销活动修改！！